# midterm_440

./: README.md  pyproject.toml
.github/workflows/: ci.yml
file_structure/: generate_file_structure _rev_3_0.py  generate_file_structure _rev_3_1.py
file_structure/chat_gpt/: program_chat_gpt.txt
file_structure/chat_gpt/chunks/: chunk1.txt
scripts/: expectations.py
src/midterm_440/numeric_core/: alu.py  bits.py  fpu_f32.py  interfaces.py  mdu.py  shifter.py  twos.py
tests/unit/: smoke_mdu.py  test_alu.py  test_bits.py  test_fpu_f32.py  test_mdu.py  test_shifter.py  test_twos.py
