[project]
name = "midterm-440"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Dobley",email = "mkmshopping@sbcglobal.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "midterm_440", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
