[project]
name = "midterm-440"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Dobley",email = "mkmshopping@sbcglobal.net"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "midterm_440", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
